[gd_scene load_steps=7 format=3 uid="uid://b11agu7i7x7ky"]

[ext_resource type="Script" uid="uid://6dfi2or08nsr" path="res://Scripts/virus.gd" id="1_nvaa8"]
[ext_resource type="Texture2D" uid="uid://cc5yfdl2mu5tf" path="res://Assets/Sprites/Virus3.png" id="2_mmbo5"]
[ext_resource type="Texture2D" uid="uid://b2eubi3e0hjma" path="res://Assets/Sprites/Virus4.png" id="3_q5b5t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bra6l"]
height = 48.0

[sub_resource type="SpriteFrames" id="SpriteFrames_685nl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mmbo5")
}, {
"duration": 1.0,
"texture": ExtResource("3_q5b5t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ut1pp"]
radius = 600.0

[node name="VirusBlue" type="CharacterBody2D"]
position = Vector2(-7, -2)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_nvaa8")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_bra6l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_685nl")
frame_progress = 0.706919

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_bra6l")
debug_color = Color(0.980092, 0.140467, 0, 0.42)

[node name="Wakebox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wakebox"]
shape = SubResource("CircleShape2D_ut1pp")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Wakebox" to="." method="_on_wakebox_body_entered"]
[connection signal="body_exited" from="Wakebox" to="." method="_on_wakebox_body_exited"]
